crates/analyzer/tests/snapshots/errors__external_call_type_error.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"

---
error: incorrect type for `bar` argument `a`
  ┌─ compile_errors/external_call_type_error.fe:9:34
  │
9 │         Foo(ctx, address(0)).bar("hello world")
  │                                  ^^^^^^^^^^^^^ this has type `String<11>`; expected type `u256`


